Sculpt error: hide border #47221

Closed
opened 2016-01-21 20:07:39 +01:00 by Alexey · 12 comments

System Information
Operating system and graphics card

Blender Version
Broken: (all)
Worked: (none)

Short description of error
1.png
2.png
3.png
Exact steps for others to reproduce the error
sculpt.blend
open - all properly
select any other shading mode - we will not see hidden area

**System Information** Operating system and graphics card **Blender Version** Broken: (all) Worked: (none) **Short description of error** ![1.png](https://archive.blender.org/developer/F276103/1.png) ![2.png](https://archive.blender.org/developer/F276105/2.png) ![3.png](https://archive.blender.org/developer/F276107/3.png) **Exact steps for others to reproduce the error** [sculpt.blend](https://archive.blender.org/developer/F276149/sculpt.blend) open - all properly select any other shading mode - we will not see hidden area
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

I can confirm it but the hidden part stay hidden if you turn Dyntopo on.

I can confirm it but the hidden part stay hidden if you turn Dyntopo on.
Author

yes, if we switch on dyntopo - we will see hidden area. But if we switch on, select rendered shading mode - we will have this bug again

yes, if we switch on dyntopo - we will see hidden area. But if we switch on, select rendered shading mode - we will have this bug again

Added subscriber: @mont29

Added subscriber: @mont29
Mike Erwin was assigned by Bastien Montagne 2016-01-22 15:48:59 +01:00

@Inwader77 please upload simple .blend files, there is absolutely no need for an 8Mb one to demonstrate this bug!

@Inwader77 please upload **simple** .blend files, there is absolutely no need for an 8Mb one to demonstrate this bug!

Mike, maybe you know 'off hand' where the issue could be? ;)

Mike, maybe you know 'off hand' where the issue could be? ;)
Author

In #47221#354513, @mont29 wrote:
@Inwader77 please upload simple .blend files, there is absolutely no need for an 8Mb one to demonstrate this bug!

hide_border.blend1
open - we will see proper hidden area.
select rendered, textured, material, wire shading mode - bug.
switch on dyntopo - proper work in all modes

> In #47221#354513, @mont29 wrote: > @Inwader77 please upload **simple** .blend files, there is absolutely no need for an 8Mb one to demonstrate this bug! [hide_border.blend1](https://archive.blender.org/developer/F276779/hide_border.blend1) open - we will see proper hidden area. select rendered, textured, material, wire shading mode - bug. switch on dyntopo - proper work in all modes
Member

Cool, I was unaware of this feature. The release notes mention it only works in solid shading mode. It also affects edit mode -- hidden parts remain hidden.

http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.63/Sculpt_Hiding
http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.63/Sculpt_Hiding/Implementation

The fix is to honor the ME_HIDE vertex flag when sculpting in other display modes. I don't think it should affect object mode or Cycles render previews.

Cool, I was unaware of this feature. The release notes mention it only works in solid shading mode. It also affects edit mode -- hidden parts remain hidden. http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.63/Sculpt_Hiding http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.63/Sculpt_Hiding/Implementation The fix is to honor the ME_HIDE vertex flag when sculpting in other display modes. I don't think it should affect object mode or Cycles render previews.

This issue was referenced by 9afab70985

This issue was referenced by 9afab7098519e5044664580dc1c3117918549383

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47221
No description provided.