Partial Fix T47221: Sculpt Hide fails w/ texture drawing

Support for skipping hidden faces in sculpt mode w/ texture drawing.